# block27

task1/: CMakeLists.txt
task1/include/: ClassCircle.h  ClassFigure.h  ClassRectangle.h  ClassSquare.h  ClassTriangle.h
task1/src/: CMakeLists.txt  ClassCircle.cpp  ClassFigure.cpp  ClassRectangle.cpp  ClassSquare.cpp  ClassTriangle.cpp  main1.cpp
task2/task2/: CMakeLists.txt
task2/task2/include/: ClassDirector.h  ClassManager.h  ClassTasks.h  ClassTeam.h  ClassWorker.h
task2/task2/src/: CMakeLists.txt  ClassDirector.cpp  ClassManager.cpp  ClassTasks.cpp  ClassTeam.cpp  ClassWorker.cpp  task2.cpp
task3/: CMakeLists.txt
task3/include/: ClassNode.h  ClassTree.h  task3.h
task3/src/: CMakeLists.txt  ClassNode.cpp  ClassTree.cpp  task3.cpp
